# tech-support

./: .gitignore  LICENSE  README.md
back/: pyproject.toml  run.py
back/profiling/: load_test.py  profile_cpu.py  profile_memory.py
back/profiling/output/: cpu_profile.prof
back/src/back/: context.py  logging_config.py  main.py  middleware.py
docs/: api.rst  conf.py  deployment.md  generate_docs.md  index.rst  performance.md
front/: package.json
front/src/: App.tsx  index.css  main.tsx
