[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "burjuazniy",email = "127854656+burjuazniy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "fastapi[standard] (>=0.135.2,<0.136.0)"
]

[tool.poetry]
packages = [{include = "back", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
